--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .main {
   padding: 40px 20px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   min-height: 300px;
   align-items: center;
 }
