--- a/src/pages/Vote.css
+++ b/src/pages/Vote.css
@@ -1,30 +1,25 @@
-.add-form {
+.vote-form {
   display: flex;
   flex-direction: column;
   padding: 10px;
 }
 
-.add-form__input {
+.add-form__answer {
   width: 100%;
   margin-bottom: 30px;
   background: none;
   border: none;
-  border-bottom: 0.5px solid rgba(255, 255, 255, 0.6);
   font-size: 0.9rem;
   color: white;
   padding-bottom: 5px;
 }
 
-.add-form__input-question {
+.add-form__question {
   font-weight: 500;
   background: none;
-  border: none;
-  border-bottom: 0.5px solid rgba(255, 255, 255, 0.6);
+  word-wrap: break-word;
   font-size: 1rem;
   color: white;
   margin-bottom: 40px;
   padding-bottom: 5px;
-}
-::placeholder {
-  color: rgba(255, 255, 255, 0.6);
 }
